# xenstore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: xenstore-cli-async.rs  xenstore-cli.rs
src/: lib.rs  libxenstore.rs  main.rs  wire.rs
src/tokio/: device.rs  interface.rs  mod.rs  wire_async.rs
src/unix/: interface.rs  mod.rs
