[package]
name = "xenstore-rs"
version = "0.5.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "Rust FFI bindings for libxenstore"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenstore"
repository = "https://github.com/Wenzel/xenstore"
license = "GPL-3.0-only"
keywords = ["xen", "xenstore"]
categories = ["api-bindings"]

[dependencies]
libloading = "0.8.0"
log = "0.4.20"
xenstore-sys = "0.1.2"
libc = "0.2.148"
tokio = { version = "1.0", features = [
    "sync",
    "net",
    "io-util",
    "rt",
], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }

[features]
default = ["async_watch"]
async_watch = ["futures", "tokio"]
# static linking libxenstore
static = ["xenstore-sys/static"]

