[package]
name = "xenstore-rs"
version = "0.8.0"
authors = [
    "Mathieu Tarral <mathieu.tarral@protonmail.com>",
    "Teddy Astie <teddy.astie@vates.tech>",
]
edition = "2018"
description = "Rust implementation of XenStore"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenstore"
repository = "https://github.com/Wenzel/xenstore"
license = "GPL-3.0-only"
keywords = ["xen", "xenstore"]
categories = ["api-bindings"]

[dependencies]

# Async dependencies
[dependencies.trait-variant]
# See https://blog.rust-lang.org/2023/12/21/async-fn-rpit-in-traits.html
version = "0.1.2"
optional = true

[dependencies.futures]
version = "0.3"
default-features = false
optional = true

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }

[features]
default = ["unix"]
unix = []
async = ["futures", "trait-variant"]
