[package]
name = "xenstore-rs"
version = "0.8.0"
authors = [
    "Mathieu Tarral <mathieu.tarral@protonmail.com>",
    "Teddy Astie <teddy.astie@vates.tech>",
]
edition = "2018"
description = "Rust implementation of XenStore"
readme = "README.md"
homepage = "https://github.com/Wenzel/xenstore"
repository = "https://github.com/Wenzel/xenstore"
license = "GPL-3.0-only"
keywords = ["xen", "xenstore"]
categories = ["api-bindings"]

[dependencies]

# Async dependencies
[dependencies.trait-variant]
# See https://blog.rust-lang.org/2023/12/21/async-fn-rpit-in-traits.html
version = "0.1.2"
optional = true

[dependencies.futures]
version = "0.3"
default-features = false
optional = true

# Tokio implementation dependencies
[dependencies.log] # Logging
version = "0.4"
optional = true

[dependencies.anyhow] # Error handling
version = "1.0"
optional = true

[dependencies.tokio]
version = "1.0"
features = ["sync", "net", "io-util", "rt", "fs", "macros"]
optional = true

[dependencies.uuid] # Used for xenstore token generation/management
version = "1.11"
features = ["v4"]
optional = true

[dependencies.libc] # needed to O_NONBLOCK
version = "0.2.168"
optional = true

[dev-dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colog = "1.3.0"

[features]
default = ["unix"]
unix = []
async = ["futures", "trait-variant"]
async-tokio = ["log", "async", "tokio", "anyhow", "uuid", "libc"]
